--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- About Section -->
     <section id="about">
       <h2>About Me</h2>
-      <img src="./public/img/WhatsApp Image 2025-10-23 at 10.38.46 PM.jpeg" alt="Profile picture of me smiling" width="200"/>
+      <img src="./public/img/WhatsApp Image 2025-10-23 at 10.38.46 PM.jpeg" alt="Profile picture of me smiling"/>
       <p>I’m a developer focused on backend and frontend systems, APIs, and DevOps workflows. I enjoy problem-solving and building real-world solutions.</p>
     </section>
 
